riscv: ELF header GNU property for riscv-zisslpcfi
Binaries enabled for Zisslpcfi will have new instructions that may fault
on risc-v cpus which dont implement Zimops or Zicfi. This change adds

    - support for parsing new backward and forward cfi flags in PT_GNU_PROPERTY
    - setting cfi state on recognizing cfi flags in ELF
    - enable back cfi and forward cfi in sstatus

Signed-off-by: Deepak Gupta <debug@rivosinc.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -129,6 +129,8 @@ config RISCV
 	select TRACE_IRQFLAGS_SUPPORT
 	select USER_SHADOW_STACK
 	select USER_INDIRECT_BR_LP
+	select ARCH_USE_GNU_PROPERTY
+	select ARCH_BINFMT_ELF_STATE
 	select UACCESS_MEMCPY if !MMU
 	select ZONE_DMA32 if 64BIT
 
